# osod-2

./: .gitignore  README.md  nextsteps.md  pyproject.toml
data/prompts/: voc_coco_full.txt  voc_coco_t2.txt
data/splits/: voc_coco_t1_train.txt  voc_coco_t1_val.txt  voc_coco_t2_train.txt  voc_coco_t2_val.txt
scripts/: Untitled  demo_visualize.py  download_data.py  scene1_closed_set_visual.py  scene2_open_set_visual_failure.py  scene3_osod_visual.py  scene3_proposed_model_visual.py  viz_utils.py
src/: __init__.py  clip_text.py  config.py  eval.py  train.py
src/data/: __init__.py  coco.py  composite.py  splits.py  voc.py
src/models/: build.py
src/models/backbones/: convnet_small.py
src/models/losses/: __init__.py  class_decorrelation.py  entropy_threshold.py  object_focus.py  semantic_alignment.py
src/models/roi_heads/: __init__.py  semantic_cluster_head.py
src/models/rpn/: __init__.py  object_focus.py
